--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script src="script.js" defer=""></script>
 </head>
 <body>
+    <div class="display">
+        <div ><h1> TIC TAC TOE</h1></div>
+       
+        <!-- <div ><span> Player Two:</span><span id="playerTwo"></span></div> -->
+    </div>
+    <div class="displayBoard"><span id="displayBoard"></span></div>
     <div class="gameboard">
         <div class="square" id="0"></div>
         <div class="square" id="1"></div>
@@ -21,5 +27,6 @@
         <div class="square" id="8"></div>
       
     </div>
+    <button id="restartButton">RESTART</button>
 </body>
 </html>
